@startuml Services Class Diagram

package Services{
    package AvengerServices{
        abstract class IAvengerService
        {
            + getAllAvengers(): Future<ServiceResult<List<AvengerBO>>>
            + createAvenger (AvengerBO newHero): Future<ServiceResult<List<AvengerBO>>>
            + editAvenger (AvengerBO editAvengerName): Future<ServiceResult<List<AvengerBO>>>
            + deleteAvenger (AvengerBO deleteAvengerName): Future<ServiceResult<List<AvengerBO>>>

        }
    }
}

package BOs{
    package AvengerBO{
        class AvengerBO{
            + id : int
            + name : String
        }
    }
}

package Helpers{
    package AppConstants
    {
        class AppConstants
        {
            + avengerServiceBaseUrl : String
            + avengerServiceGetAvengerEndPoint : String
            + avengerServiceCreateHeroEndPoint : String
            + avengerServiceEditEndPoint : String
        }
    }
}

package Pages{
    package HomeScreen
    {
        class HomeScreenVM{
            + fetchAllAvengers() : Future<void>
            + showInputPopUp(int index) : void
            + createAvenger(String nameOfAvenger) : Future<void>
            + navigateToPreviousView() : void
            + editAvenger(int index, String names) : Future<void>
            + deleteAvenger(int index) : void
            + inputPopUp() : void
        }
    }
}



IAvengerService --> BOs.AvengerBO.AvengerBO : uses
IAvengerService --> Helpers.AppConstants.AppConstants : uses
HomeScreenVM --> IAvengerService : uses


@enduml